--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "lucien"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 description = "A loggin agent to work with LLM in Lucid Mode"
-license = "Apache License 2.0"
+license = "Apache-2.0"
 
 authors = ["IteraLabs"]
 keywords = ["ai", "llm", "nvidia", "gpu", "monitoring"]
@@ -11,7 +11,16 @@ repository = "https://github.com/iteralabs/lucien"
 readme = "README.md"
 
 [dependencies]
+pyo3 = "0.21.0"
 nvml-wrapper = "0.10.0"
 nvml-wrapper-sys = "0.8.0"
 pretty-bytes = "0.2"
 
+[profile.release-lto]
+inherits = "release"
+lto = true
+
+[lib]
+name = "_lib"
+crate-type = ["cdylib"]
+path = "rust/lib.rs"
