--- a/programs/lucien/Cargo.toml
+++ b/programs/lucien/Cargo.toml
@@ -8,6 +8,21 @@ edition = "2021"
 crate-type = ["cdylib", "lib"]
 name = "lucien"
 
+[dependencies]
+anchor-lang = { workspace = true }
+pyth-solana-receiver-sdk = { workspace = true }
+libm = { workspace = true }
+
+[dev-dependencies]
+anchor-lang = { workspace = true }
+anchor-client = { workspace = true }
+solana-sdk = { workspace = true }
+tokio = { workspace = true }
+solana-client = { workspace = true }
+
+#solana-program-test = { workspace = true } 
+
+
 [features]
 cpi = ["no-entrypoint"]
 default = []
@@ -19,10 +34,41 @@ custom-heap = []
 custom-panic = []
 anchor-debug = []
 
-[dependencies]
-anchor-lang = { workspace = true }
-pyth-solana-receiver-sdk = { workspace = true }
-libm = { workspace = true }
+[lints.rust]
+unsafe_code = "forbid"
+dead_code = "forbid"
+unused_extern_crates = "warn"
+unused_variables = "forbid"
+unused_imports = "forbid"
+unreachable_code = "warn"
+unreachable_patterns = "warn"
+trivial_casts = "warn"
+trivial_numeric_casts = "forbid"
 
-[dev.dependencies]
+# ---------------------------------------------------------------------------- Tests -- #
+# ---------------------------------------------------------------------------- ----- -- #
+
+[[test]]
+name = "connectivity"
+path = "tests/test_connectivity.rs"
+
+[[test]]
+name = "initialize_accounts"
+path = "tests/test_initialize_accounts.rs"
+
+[[test]]
+name = "initialize_model"
+path = "tests/test_initialize_model.rs"
+
+[[test]]
+name = "account_fetching"
+path = "tests/test_account_fetching.rs"
+
+[[test]]
+name = "program_exists"
+path = "tests/test_program_exist.rs"
+
+[[test]]
+name = "program_instructions"
+path = "tests/test_program_instructions.rs"
 
